--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=8433c0e5c554b72c22433398b75106f3
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://pointcash:EWeesceIBj1smfsh@127.0.0.1:3306/point_cash_api?serverVersion=5.7
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/topadPojectAPI?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -39,6 +39,6 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=2433609259249a1b87b2785a7dde10c0
+JWT_PASSPHRASE=houda
 JWT_TOKEN_TTL=3600
 ###< lexik/jwt-authentication-bundle ###
