--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "friendsofsymfony/user-bundle": "~2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.5",
@@ -32,7 +33,7 @@
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/twig": "^2.0",
-        "ext-json": "*"
+        "vich/uploader-bundle": "^1.13"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
