--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,2 +1,9 @@
 framework:
   translator: ~
+# vich_uploader:
+#     db_driver: orm # or mongodb or phpcr
+#     mappings:
+#         product_image:
+#             uri_prefix: /images/products
+#             upload_destination: '%kernel.project_dir%/public/images/products'
+#             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
